app/assets/stylesheets/books.css
.book__cover {
  background-color: var(--color-subtle-light);
  border-radius: 0.3em;
  box-shadow: 0 0 0 1px var(--color-subtle);
  margin: auto;
  max-block-size: var(--cover-height, 75dvh);
}

.book__cover--remove {
  margin-block-start: calc(var(--block-space) * -1);
}

.bookmark {
  --icon-size: 1.5em;

  display: block;
  inset: var(--progress, 0) calc(var(--icon-size) / 4) auto calc(var(--icon-size) * -0.5);
  margin-block-start: calc(var(--icon-size) * -0.5);
  position: absolute;

  .bookmark__icon {
    display: flex;
    flex-grow: 1;

    svg {
      block-size: var(--icon-size);
      flex-shrink: 0;
      inline-size: var(--icon-size);
    }

    &::after {
      border-block-end: 0.07em dashed var(--color-marker);
      content: "";
      display: flex;
      flex-grow: 1;
      margin: auto;
    }
  }
}

.book__nav {
  font-size: var(--font-medium-responsive);
  inline-size: 60ch;
  margin-inline: auto;
  max-inline-size: 100%;
  padding-inline: clamp(var(--inline-space), 5cqi, calc(var(--inline-space) * 3));
}

.bookmark__link {
  border-radius: 0.3em;
  color: var(--color-link);
  content: "";
  inset: 0;
  position: absolute;
  z-index: 1;
}

.book__title {
  font-weight: 750;
}

.book__toolbar {
  inset-block-start: 0;
  position: sticky;
  z-index: 1;
}

